goddamnit had to fix one thing

--- a/wordgenerator.html
+++ b/wordgenerator.html
@@ -691,7 +691,7 @@
 						}
 					});
 
-					if (cumulativeProb > 1+1e-10){
+					if (cumulativeProb > 1+EPSILON){
 						node = "H";
 						// nodeLog += " - H";
 						continue;
